{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 214,
  "lineage": "9d85568c-2381-7724-b9eb-4d322901a55c",
  "resources": [
    {
      "module": "module.alb[\"alb-web\"]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543587661760:loadbalancer/app/alb-web/36cb6da18c60f88d",
            "arn_suffix": "app/alb-web/36cb6da18c60f88d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-web-241114375.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:543587661760:loadbalancer/app/alb-web/36cb6da18c60f88d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f45555d6ee7c30da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9066442d98c023a"
              },
              {
                "subnet_id": "subnet-0e7e73056a3189333"
              }
            ],
            "subnets": [
              "subnet-0a9066442d98c023a",
              "subnet-0e7e73056a3189333"
            ],
            "vpc_id": "vpc-012c0fbc1e8dc2d85",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[\"alb-web\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543587661760:listener/app/alb-web/36cb6da18c60f88d/254d33ac56c03165",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:543587661760:targetgroup/alb-tg-web/268bc17069fef0bc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543587661760:listener/app/alb-web/36cb6da18c60f88d/254d33ac56c03165",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:543587661760:loadbalancer/app/alb-web/36cb6da18c60f88d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.web",
            "module.alb.aws_lb_target_group.web",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb[\"alb-web\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543587661760:targetgroup/alb-tg-web/268bc17069fef0bc",
            "arn_suffix": "targetgroup/alb-tg-web/268bc17069fef0bc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543587661760:targetgroup/alb-tg-web/268bc17069fef0bc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036253487ab7f62ba",
            "domain": "vpc",
            "id": "eipalloc-036253487ab7f62ba",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-6-107-12.compute-1.amazonaws.com",
            "public_ip": "52.6.107.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:internet-gateway/igw-09bd0a8adbab62bb9",
            "id": "igw-09bd0a8adbab62bb9",
            "owner_id": "543587661760",
            "tags": {
              "Name": "vpc_test-ig"
            },
            "tags_all": {
              "Name": "vpc_test-ig"
            },
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036253487ab7f62ba",
            "association_id": "eipassoc-02386e9dda319ae1f",
            "connectivity_type": "public",
            "id": "nat-0eb04bb7771d000d1",
            "network_interface_id": "eni-0caecc2e51f03fea3",
            "private_ip": "10.0.1.38",
            "public_ip": "52.6.107.12",
            "subnet_id": "subnet-0a9066442d98c023a",
            "tags": {
              "Name": "vpc_test-nat-gateway"
            },
            "tags_all": {
              "Name": "vpc_test-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:route-table/rtb-0e0b09bab30668991",
            "id": "rtb-0e0b09bab30668991",
            "owner_id": "543587661760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0eb04bb7771d000d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_test-private-rtb"
            },
            "tags_all": {
              "Name": "vpc_test-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:route-table/rtb-08e98a7296f7d7fcd",
            "id": "rtb-08e98a7296f7d7fcd",
            "owner_id": "543587661760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bd0a8adbab62bb9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_test-public-rtb"
            },
            "tags_all": {
              "Name": "vpc_test-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028241df6c05c1f22",
            "route_table_id": "rtb-0e0b09bab30668991",
            "subnet_id": "subnet-0eb65392a08f4bb0c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039377118e2ddc5f4",
            "route_table_id": "rtb-0e0b09bab30668991",
            "subnet_id": "subnet-0cc960a803cc49c71"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_subnet_01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c39943daa3e9968",
            "route_table_id": "rtb-08e98a7296f7d7fcd",
            "subnet_id": "subnet-0a9066442d98c023a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_subnet_02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9c1dfc3c27dbb4",
            "route_table_id": "rtb-08e98a7296f7d7fcd",
            "subnet_id": "subnet-0e7e73056a3189333"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:security-group/sg-0a471303724042c4e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a471303724042c4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "543587661760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg"
            },
            "tags_all": {
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:security-group/sg-0f45555d6ee7c30da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f45555d6ee7c30da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "543587661760",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:subnet/subnet-0eb65392a08f4bb0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb65392a08f4bb0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543587661760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_01"
            },
            "tags_all": {
              "Name": "private_subnet_01"
            },
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_subnet_02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:subnet/subnet-0cc960a803cc49c71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc960a803cc49c71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543587661760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_02"
            },
            "tags_all": {
              "Name": "private_subnet_02"
            },
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_subnet_01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:subnet/subnet-0a9066442d98c023a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9066442d98c023a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "543587661760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_01"
            },
            "tags_all": {
              "Name": "public_subnet_01"
            },
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_subnet_02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:subnet/subnet-0e7e73056a3189333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e73056a3189333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "543587661760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_02"
            },
            "tags_all": {
              "Name": "public_subnet_02"
            },
            "vpc_id": "vpc-012c0fbc1e8dc2d85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc_test\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543587661760:vpc/vpc-012c0fbc1e8dc2d85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b74e93bdf7b055b4",
            "default_route_table_id": "rtb-0fc06942f921e0542",
            "default_security_group_id": "sg-0f9d5b373960ebbfd",
            "dhcp_options_id": "dopt-0fa3faa2c735b57ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012c0fbc1e8dc2d85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc06942f921e0542",
            "owner_id": "543587661760",
            "tags": {
              "Name": "vpc_test"
            },
            "tags_all": {
              "Name": "vpc_test"
            }
          }
        }
      ]
    }
  ]
}